# cookiecutter-custom-flask-template

./: README.md  cookiecutter.json
{{cookiecutter.folder_name}}/: package-lock.json  package.json  pyproject.toml
{{cookiecutter.folder_name}}/sql/: data.sql  schema.sql
{{cookiecutter.folder_name}}/{{cookiecutter.project_name}}/: __init__.py  config.py  model.py
{{cookiecutter.folder_name}}/{{cookiecutter.project_name}}/api/: __init__.py  element.py
{{cookiecutter.folder_name}}/{{cookiecutter.project_name}}/static/: style.css
{{cookiecutter.folder_name}}/{{cookiecutter.project_name}}/templates/: create.html  delete.html  edit.html  index.html  login.html  password.html
{{cookiecutter.folder_name}}/{{cookiecutter.project_name}}/views/: __init__.py  accounts.py  index.py  login.py  uploads.py
