[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
version = "1.0.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "requests",
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["{{cookiecutter.project_name}}"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
